Thu Aug 05 12:27:15 1999    <loic@yoda.ceic.com>

	* test/dbbench.cc: invert -z and -Z for consistency

	* test/Makefile.am: add dbbench call examples

Thu Aug 05 11:38:58 1999  Loic Dachary  <loic@ceic.com>

	* test/Makefile.am: all .html go in distribution, compile dbbench
	  that tests Berkeley DB performances.

	* configure.in/Makefile.am: conditional inclusion of the test
	  directory in the list of subdirs (--enable-test). The list
	  of subdirs is now @HTDIGDIRS@ in configure.in & Makefile.am

	* db/*: Transparent I/O compression implementation. Defines the DB_COMPRESS flag.
	  For instance DB_CREATE | DB_COMPRESS.

	* db/db_dump/load: add -C option to specify cache size to db_dump/db_load

Wed Aug  4 22:57:27 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* db/*: Import of Sleepycat's Berkeley DB 2.7.5.

Wed Aug  4 22:40:49 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* contrib/htparsedoc/htparsedoc: Add in contributed bug fixes from
	Andrew Bishop to work on SunOS 4.x machines.

Wed Aug  4 01:58:52 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* COPYING, htdoc/COPYING, configure.in, Makefile.am, Makefile.in:
	Update information to use canonical version of the GPL from the
	FSF. In particular, this version has the correct mailing address
	of the FSF.

Mon Aug 02 11:28:00 1999 Gabriele Bartolini <g.bartol@comune.prato.it>

	* htlib/htString.h, htlib/String.cc : added the possibility to
	insert an unsigned int into a string.
	* htdig.cc : with verbose mode shows start and end time.

Thu Jul 22 18:10:00 1999 Gabriele Bartolini <g.bartol@comune.prato.it>

	* htdig/Transport.cc, htdig/HtHTTP.cc : modified the destructors.

Thu Jul 22 13:10:00 1999 Gabriele Bartolini <g.bartol@comune.prato.it>

	* htdig/Transport.cc, htdig/Transport.h, htdig/HtHTTP.cc, 
	htdig/HtHTTP.h: Re-analyzed inheritance methods and attributes of
	the 2 classes. This is a first step, not definitive ... cos it
	still doesn't work as I hope.
